--- a/docs/doxy-ee.conf
+++ b/docs/doxy-ee.conf
@@ -8,7 +8,7 @@ PROJECT_NAME           = "ps2sdk"
 PROJECT_NUMBER         = 1.1
 PROJECT_BRIEF          = "PS2SDK is a collection of Open Source libraries used for developing applications on Sony's PlayStation 2® (PS2)."
 PROJECT_LOGO           =
-OUTPUT_DIRECTORY       = ../ps2sdk-doc
+OUTPUT_DIRECTORY       =
 CREATE_SUBDIRS         = NO
 ALLOW_UNICODE_NAMES    = NO
 OUTPUT_LANGUAGE        = English
@@ -18,7 +18,7 @@ ABBREVIATE_BRIEF       =
 ALWAYS_DETAILED_SEC    = NO
 INLINE_INHERITED_MEMB  = NO
 FULL_PATH_NAMES        = YES
-STRIP_FROM_PATH        =
+STRIP_FROM_PATH        = ..
 STRIP_FROM_INC_PATH    =
 SHORT_NAMES            = NO
 JAVADOC_AUTOBRIEF      = NO
@@ -96,11 +96,11 @@ WARN_IF_DOC_ERROR      = YES
 WARN_NO_PARAMDOC       = NO
 WARN_AS_ERROR          = NO
 WARN_FORMAT            = "$file:$line: $text"
-WARN_LOGFILE           = warn.log
+WARN_LOGFILE           = warn-ee.log
 #---------------------------------------------------------------------------
 # Configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = ee.md ./ ../common
+INPUT                  = ee.md ../ee ../common
 INPUT_ENCODING         = UTF-8
 FILE_PATTERNS          = *.c \
                          *.cc \
@@ -294,8 +294,8 @@ SKIP_FUNCTION_MACROS   = YES
 # Configuration options related to external references
 #---------------------------------------------------------------------------
 # tagfile=relative html directory
-TAGFILES               = ../ps2sdk-doc/main.tag=..
-GENERATE_TAGFILE       = ../ps2sdk-doc/ee.tag
+TAGFILES               = main.tag=..
+GENERATE_TAGFILE       = ee.tag
 ALLEXTERNALS           = YES
 EXTERNAL_GROUPS        = YES
 EXTERNAL_PAGES         = YES
