--- a/docs/doxy-index.conf
+++ b/docs/doxy-index.conf
@@ -8,7 +8,7 @@ PROJECT_NAME           = "ps2sdk"
 PROJECT_NUMBER         = 1.1
 PROJECT_BRIEF          = "PS2SDK is a collection of Open Source libraries used for developing applications on Sony's PlayStation 2® (PS2)."
 PROJECT_LOGO           =
-OUTPUT_DIRECTORY       = ../ps2sdk-doc
+OUTPUT_DIRECTORY       =
 CREATE_SUBDIRS         = NO
 ALLOW_UNICODE_NAMES    = NO
 OUTPUT_LANGUAGE        = English
@@ -18,7 +18,7 @@ ABBREVIATE_BRIEF       =
 ALWAYS_DETAILED_SEC    = NO
 INLINE_INHERITED_MEMB  = NO
 FULL_PATH_NAMES        = YES
-STRIP_FROM_PATH        =
+STRIP_FROM_PATH        = ..
 STRIP_FROM_INC_PATH    =
 SHORT_NAMES            = NO
 JAVADOC_AUTOBRIEF      = NO
@@ -100,7 +100,7 @@ WARN_LOGFILE           = warn.log
 #---------------------------------------------------------------------------
 # Configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = iop.md ./ ../common
+INPUT                  = index.md ../README.md
 INPUT_ENCODING         = UTF-8
 FILE_PATTERNS          = *.c \
                          *.cc \
@@ -122,12 +122,10 @@ FILE_PATTERNS          = *.c \
 # TODO: Add macros to assembly to skip parsing assembly, just comments
 EXTENSION_MAPPING      = S=C \
                          s=C
-RECURSIVE              = YES
+RECURSIVE              = NO
 EXCLUDE                =
 EXCLUDE_SYMLINKS       = NO
-EXCLUDE_PATTERNS       = */samples/* \
-                         */common/tcpip/* \
-                         */common/sbus/*
+EXCLUDE_PATTERNS       =
 EXCLUDE_SYMBOLS        =
 EXAMPLE_PATH           =
 EXAMPLE_PATTERNS       =
@@ -137,7 +135,7 @@ INPUT_FILTER           =
 FILTER_PATTERNS        =
 FILTER_SOURCE_FILES    = NO
 FILTER_SOURCE_PATTERNS =
-USE_MDFILE_AS_MAINPAGE = iop.md
+USE_MDFILE_AS_MAINPAGE = index.md
 #---------------------------------------------------------------------------
 # Configuration options related to source browsing
 #---------------------------------------------------------------------------
@@ -162,7 +160,7 @@ IGNORE_PREFIX          =
 # Configuration options related to the HTML output
 #---------------------------------------------------------------------------
 GENERATE_HTML          = YES
-HTML_OUTPUT            = html/iop
+HTML_OUTPUT            = html
 HTML_FILE_EXTENSION    = .html
 HTML_HEADER            =
 HTML_FOOTER            =
@@ -198,7 +196,7 @@ QHG_LOCATION           =
 GENERATE_ECLIPSEHELP   = NO
 ECLIPSE_DOC_ID         = org.ps2dev.ps2sdk
 DISABLE_INDEX          = YES
-GENERATE_TREEVIEW      = YES
+GENERATE_TREEVIEW      = NO
 ENUM_VALUES_PER_LINE   = 4
 TREEVIEW_WIDTH         = 250
 EXT_LINKS_IN_WINDOW    = NO
@@ -209,7 +207,7 @@ MATHJAX_FORMAT         = HTML-CSS
 MATHJAX_RELPATH        = http://cdn.mathjax.org/mathjax/latest
 MATHJAX_EXTENSIONS     =
 MATHJAX_CODEFILE       =
-SEARCHENGINE           = YES
+SEARCHENGINE           = NO
 SERVER_BASED_SEARCH    = NO
 EXTERNAL_SEARCH        = NO
 SEARCHENGINE_URL       =
@@ -287,18 +285,19 @@ EXPAND_ONLY_PREDEF     = NO
 SEARCH_INCLUDES        = YES
 INCLUDE_PATH           =
 INCLUDE_FILE_PATTERNS  =
-PREDEFINED             = DOXYGEN _IOP
+PREDEFINED             = DOXYGEN _EE
 EXPAND_AS_DEFINED      =
 SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
 # Configuration options related to external references
 #---------------------------------------------------------------------------
 # tagfile=relative html directory
-TAGFILES               = ../ps2sdk-doc/main.tag=..
-GENERATE_TAGFILE       = ../ps2sdk-doc/iop.tag
-ALLEXTERNALS           = YES
-EXTERNAL_GROUPS        = YES
-EXTERNAL_PAGES         = YES
+TAGFILES               = ee.tag=ee \
+                         iop.tag=iop
+GENERATE_TAGFILE       = main.tag
+ALLEXTERNALS           = NO
+EXTERNAL_GROUPS        = NO
+EXTERNAL_PAGES         = NO
 PERL_PATH              = /usr/bin/perl
 #---------------------------------------------------------------------------
 # Configuration options related to the dot tool
