Fixups to configuration files.
doxy-index.conf:
  Use README.md for main page and disable tree view.
  Remove assembly as input.
  Tweak PROJECT_BRIEF.

doxy-ee.conf:
doxy-iop.conf:
  Remove assembly as input.
  Add __attribute__ and __attribute macro definitions.
  Enable macro expansion.
  Tweak PROJECT_BRIEF.

--- a/docs/doxy-ee.conf
+++ b/docs/doxy-ee.conf
@@ -6,7 +6,7 @@
 DOXYFILE_ENCODING      = UTF-8
 PROJECT_NAME           = "ps2sdk"
 PROJECT_NUMBER         = 1.1
-PROJECT_BRIEF          = "PS2SDK is a collection of Open Source libraries used for developing applications on Sony's PlayStation 2® (PS2)."
+PROJECT_BRIEF          = "A collection of Open Source libraries used for developing applications on Sony's PlayStation 2® (PS2)."
 PROJECT_LOGO           =
 OUTPUT_DIRECTORY       =
 CREATE_SUBDIRS         = NO
@@ -116,12 +116,8 @@ FILE_PATTERNS          = *.c \
                          *.ii \
                          *.ixx \
                          *.ipp \
-                         *.i++ \
-                         *.S \
-                         *.s
-# TODO: Add macros to assembly to skip parsing assembly, just comments
-EXTENSION_MAPPING      = S=C \
-                         s=C
+                         *.i++
+EXTENSION_MAPPING      =
 RECURSIVE              = YES
 EXCLUDE                =
 EXCLUDE_SYMLINKS       = NO
@@ -282,12 +278,14 @@ PERLMOD_MAKEVAR_PREFIX =
 # Configuration options related to the preprocessor
 #---------------------------------------------------------------------------
 ENABLE_PREPROCESSING   = YES
-MACRO_EXPANSION        = NO
-EXPAND_ONLY_PREDEF     = NO
+MACRO_EXPANSION        = YES
+EXPAND_ONLY_PREDEF     = YES
 SEARCH_INCLUDES        = YES
 INCLUDE_PATH           =
 INCLUDE_FILE_PATTERNS  =
-PREDEFINED             = DOXYGEN _EE
+PREDEFINED             = DOXYGEN \
+                         _EE \
+                        "__attribute__(x)="
 EXPAND_AS_DEFINED      =
 SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
