--- a/docs/doxy-index.conf
+++ b/docs/doxy-index.conf
@@ -6,7 +6,7 @@
 DOXYFILE_ENCODING      = UTF-8
 PROJECT_NAME           = "ps2sdk"
 PROJECT_NUMBER         = 1.1
-PROJECT_BRIEF          = "PS2SDK is a collection of Open Source libraries used for developing applications on Sony's PlayStation 2® (PS2)."
+PROJECT_BRIEF          = "A collection of Open Source libraries used for developing applications on Sony's PlayStation 2® (PS2)."
 PROJECT_LOGO           =
 OUTPUT_DIRECTORY       =
 CREATE_SUBDIRS         = NO
@@ -100,7 +100,7 @@ WARN_LOGFILE           = warn.log
 #---------------------------------------------------------------------------
 # Configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = index.md ../README.md
+INPUT                  = ../README.md
 INPUT_ENCODING         = UTF-8
 FILE_PATTERNS          = *.c \
                          *.cc \
@@ -116,12 +116,8 @@ FILE_PATTERNS          = *.c \
                          *.ii \
                          *.ixx \
                          *.ipp \
-                         *.i++ \
-                         *.S \
-                         *.s
-# TODO: Add macros to assembly to skip parsing assembly, just comments
-EXTENSION_MAPPING      = S=C \
-                         s=C
+                         *.i++
+EXTENSION_MAPPING      =
 RECURSIVE              = NO
 EXCLUDE                =
 EXCLUDE_SYMLINKS       = NO
@@ -135,7 +131,7 @@ INPUT_FILTER           =
 FILTER_PATTERNS        =
 FILTER_SOURCE_FILES    = NO
 FILTER_SOURCE_PATTERNS =
-USE_MDFILE_AS_MAINPAGE = index.md
+USE_MDFILE_AS_MAINPAGE = ../README.md
 #---------------------------------------------------------------------------
 # Configuration options related to source browsing
 #---------------------------------------------------------------------------
@@ -196,7 +192,7 @@ QHG_LOCATION           =
 GENERATE_ECLIPSEHELP   = NO
 ECLIPSE_DOC_ID         = org.ps2dev.ps2sdk
 DISABLE_INDEX          = NO
-GENERATE_TREEVIEW      = YES
+GENERATE_TREEVIEW      = NO
 ENUM_VALUES_PER_LINE   = 4
 TREEVIEW_WIDTH         = 250
 EXT_LINKS_IN_WINDOW    = NO
