Add samples to input

--- a/docs/doxy-ee.conf
+++ b/docs/doxy-ee.conf
@@ -121,8 +121,7 @@ EXTENSION_MAPPING      =
 RECURSIVE              = YES
 EXCLUDE                =
 EXCLUDE_SYMLINKS       = NO
-EXCLUDE_PATTERNS       = */samples/* \
-                         */common/tcpip/* \
+EXCLUDE_PATTERNS       = */common/tcpip/* \
                          */common/sbus/*
 EXCLUDE_SYMBOLS        =
 EXAMPLE_PATH           =
@@ -285,7 +284,8 @@ INCLUDE_PATH           =
 INCLUDE_FILE_PATTERNS  =
 PREDEFINED             = DOXYGEN \
                          _EE \
-                        "__attribute__(x)="
+                        "__attribute__(x)=" \
+                        "ALIGNED(X)="
 EXPAND_AS_DEFINED      =
 SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
