--- a/docs/doxy-iop.conf
+++ b/docs/doxy-iop.conf
@@ -121,8 +121,7 @@ EXTENSION_MAPPING      =
 RECURSIVE              = YES
 EXCLUDE                =
 EXCLUDE_SYMLINKS       = NO
-EXCLUDE_PATTERNS       = */samples/* \
-                         */common/tcpip/* \
+EXCLUDE_PATTERNS       = */common/tcpip/* \
                          */common/sbus/*
 EXCLUDE_SYMBOLS        =
 EXAMPLE_PATH           =
